--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
     <meta name="keywords" content="Gracious, responsive, html5, charity, charity agency, charity foundation, charity template, church, donate, donation, fundraiser, fundraising, mosque, ngo, non-profit, nonprofit, organization, volunteer">
     
     <!-- Favicon -->    
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <link rel="shortcut icon" type="image" href="html\assets\images\faviconNGO.png">
     <!-- Animate CSSS -->    
     <link href="assets/library/animate/animate.min.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
@@ -88,7 +88,7 @@
             <div class="container text-nowrap">
                 <div class="d-flex align-items-center w-100 col p-0 logo-brand">
                     <a class="navbar-brand rounded-bottom light-bg" href="index.html">
-                        <img src="assets/images/logo_white.svg" alt="">
+                        <img src="assets/images/faviconNGO.png" alt="">
                     </a> 
                 </div>
                 <!-- Topbar Buttons Start -->
@@ -193,7 +193,7 @@
                                     </h1>
                                     <div class="owl-slide-animated owl-slide-cta">                                        
                                         <a class="btn btn-default mr-3" href="causes-list.html" role="button">Join Us Now</a>
-                                        <a class="slider-link popup-video" href="http://player.vimeo.com/video/7449107">Watch the video <i class="charity-play_button"></i></a>
+                                        <a class="slider-link popup-video" href="assets\images\demoVideoNGO.mp4">Watch the video <i class="charity-play_button"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -410,7 +410,7 @@
                         <!-- Icon Boxes Image Style -->
                         <div class="icon-box-with-img">                                                        
                             <div class="img">
-                                <a href="causes-single.html"><img src="assets/images/causes/causes_img_1.jpg" alt=""></a>
+                                <a href="causes-single.html"><img src="assets/images/helpEduNGO.jpg" alt=""></a>
                             </div>
                             <div class="text">
                                 <h3>Help For Education</h3>
@@ -427,7 +427,7 @@
                         <!-- Icon Boxes Image Style -->
                         <div class="icon-box-with-img">                            
                             <div class="img">
-                                <a href="causes-single.html"><img src="assets/images/causes/causes_img_4.jpg" alt=""></a>
+                                <a href="causes-single.html"><img src="assets/images/helpHumanityNGO.jpg" alt=""></a>
                             </div>
                             <div class="text">
                                 <h3>Help For Humanity</h3>
@@ -448,7 +448,7 @@
                         <!-- Icon Boxes Image Style -->
                         <div class="icon-box-with-img">  
                             <div class="img">
-                                <a href="causes-single.html"><img src="assets/images/causes/causes_img_3.jpg" alt=""></a>
+                                <a href="causes-single.html"><img src="assets/images/helpWaterNGO.jpg" alt=""></a>
                             </div>
                             <div class="text">
                                 <h3>Help For Water</h3>
@@ -466,7 +466,7 @@
                         <!-- Icon Boxes Image Style -->
                         <div class="icon-box-with-img">
                             <div class="img">
-                                <a href="causes-single.html"><img src="assets/images/causes/causes_img_5.jpg" alt=""></a>
+                                <a href="causes-single.html"><img src="assets/images/helpFoodNGO.jpg" alt=""></a>
                             </div>
                             <div class="text">
                                 <h3>Help For Food</h3>
