--- a/html/index-3.html
+++ b/html/index-3.html
@@ -58,7 +58,7 @@
             <div class="container text-nowrap">
                 <div class="d-flex align-items-center w-100 col p-0 logo-brand">
                     <a class="navbar-brand rounded-bottom light-bg" href="index.html">
-                        <img src="assets/images/logo_dark.svg" alt="">
+                        <img src="assets/images/logoNGO1.png" alt="">
                     </a> 
                 </div>
                 <!-- Topbar Buttons Start -->
