--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -114,12 +114,12 @@
                                 <li><a class="dropdown-item" href="index-2.html">Home Layout 2</a></li>
                                 <li><a class="dropdown-item" href="index-3.html">Home Layout 3</a></li>
                                 <li class="dropdown dropdown-submenu">
-                                    <a class="dropdown-toggle-mob dropdown-item dropdown-submenu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Third Level Menu <i class="icofont-rounded-right float-right"></i></a>
+                                    <!-- <a class="dropdown-toggle-mob dropdown-item dropdown-submenu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Third Level Menu <i class="icofont-rounded-right float-right"></i></a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <li><a href="#" class="dropdown-item">Action</a></li>
                                         <li><a href="#" class="dropdown-item">Another action</a></li>
                                         <li><a href="#" class="dropdown-item">Something else here</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                             </ul>
                         </li>
