--- a/html/about-us.html
+++ b/html/about-us.html
@@ -58,10 +58,10 @@
                 <div class="row align-items-center">
                     <div class="col d-flex align-items-center contact-info">
                         <div>
-                            <i data-feather="phone"></i>  <a href="tel:+1234567899">+1234567899</a>
+                            <i data-feather="phone"></i>  <a href="tel:+1234567899">9920805532</a>
                         </div>
                         <div>
-                            <i data-feather="mail"></i>  <a href="mailto:info@gracious.com">info@gracious.com</a>
+                            <i data-feather="mail"></i>  <a href="mailto:info@gracious.com">info@rajabhaugudadefoundation.com</a>
                         </div>
                         <div>
                             <i data-feather="clock"></i>  Mon-Fri  /  9:00 AM - 19:00 PM
@@ -70,9 +70,11 @@
 
                     <div class="col-md-auto">
                         <div class="social-icons">
-                            <a href="#"><i class="icofont-facebook"></i></a>
+                            <a href="https://www.facebook.com/102314962150037/posts/111232191258314/?d=n"><i
+                                    class="icofont-facebook"></i></a>
                             <a href="#"><i class="icofont-twitter"></i></a>
-                            <a href="#"><i class="icofont-instagram"></i></a>
+                            <a href="https://www.instagram.com/p/CR_o4mns556/?utm_medium=copy_link"><i
+                                    class="icofont-instagram"></i></a>
                             <a href="#"><i class="icofont-behance"></i></a>
                             <a href="#"><i class="icofont-youtube-play"></i></a>
                         </div>
