--- a/html/index.html
+++ b/html/index.html
@@ -126,13 +126,13 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle-mob" href="index.html" id="dropdown03"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home <i
+                                aria-haspopup="true" aria-expanded="false">Home <i
                                     class="icofont-rounded-down"></i></a>
-                            <ul class="dropdown-menu" aria-labelledby="dropdown03">
+                            <!-- <ul class="dropdown-menu" aria-labelledby="dropdown03">
                                 <li><a class="dropdown-item" href="index.html">Home Layout 1</a></li>
                                 <li><a class="dropdown-item" href="index-2.html">Home Layout 2</a></li>
 
-                                <!-- <li class="dropdown dropdown-submenu">
+                                 <li class="dropdown dropdown-submenu">
                                     <a class="dropdown-toggle-mob dropdown-item dropdown-submenu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Third Level Menu <i class="icofont-rounded-right float-right"></i></a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <li><a href="#" class="dropdown-item">Action</a></li>
@@ -140,7 +140,7 @@
                                         <li><a href="#" class="dropdown-item">Something else here</a></li>
                                     </ul>
                                 </li> -->
-                            </ul>
+                            <!-- </ul> --> 
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about-us.html">About Us</a>
