--- a/html/index.html
+++ b/html/index.html
@@ -108,7 +108,7 @@
                 <div class="d-inline-flex request-btn order-lg-last col-auto p-0 align-items-center">
                     <a class="btn-outline-primary btn ml-3" href="#" id="search_home"><i data-feather="search"></i></a>
 
-                    <a class="nav-link btn btn-default ml-3 donate-btn" href="contact-us.html">Conatct</a>
+                    <a class="nav-link btn btn-default ml-3 donate-btn" href="contact-us.html">Contact</a>
 
                     <!-- Toggle Button Start -->
                     <button class="navbar-toggler x collapsed" type="button" data-toggle="collapse"
@@ -161,10 +161,10 @@
                                 <li><a class="dropdown-item" href="volunteers.html">Volunteers</a></li>
                                 <li><a class="dropdown-item" href="become-volunteers.html">Become Volunteers</a></li>
                                 <li><a class="dropdown-item" href="donation-page.html">Donation Page</a></li>
-                                <li><a class="dropdown-item" href="shortcodes-element.html">Shortcode Elements</a></li>
-                                <li><a class="dropdown-item" href="typography.html">Typography</a></li>
+                                <!-- <li><a class="dropdown-item" href="shortcodes-element.html">Shortcode Elements</a></li> -->
+                                <!-- <li><a class="dropdown-item" href="typography.html">Typography</a></li> -->
                                 <li><a class="dropdown-item" href="our-faqs.html">Our Faq's</a></li>
-                                <li><a class="dropdown-item" href="404-page.html">404 Page</a></li>
+                                <!-- <li><a class="dropdown-item" href="404-page.html">404 Page</a></li> -->
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -173,18 +173,18 @@
                                     class="icofont-rounded-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="events-list.html">Events List</a></li>
-                                <li><a class="dropdown-item" href="events-alternate.html">Events Alternate</a></li>
+                                <!-- <li><a class="dropdown-item" href="events-alternate.html">Events Alternate</a></li> -->
                                 <li><a class="dropdown-item" href="events-single.html">Events Single</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Blog <i class="icofont-rounded-down"></i></a>
+                                aria-haspopup="true" aria-expanded="false">Blog </i></a>
 
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="blog-standard.html">Blog Standard</a></li>
-                                <li><a class="dropdown-item" href="blog-grid.html">Blog Grid</a></li>
-                                <li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
+                                <!-- <li><a class="dropdown-item" href="blog-standard.html">Blog Standard</a></li> -->
+                                <!-- <li><a class="dropdown-item" href="blog-grid.html">Blog Grid</a></li> -->
+                                <!-- <li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li> -->
                             </ul>
                         </li>
 
@@ -204,7 +204,7 @@
             <div class="owl-carousel owl-theme">
                 <!--/owl-slide-->
                 <div class="owl-slide d-flex align-items-center cover"
-                    style="background-image: url(images\helpOneBackground.jpg);">
+                    style="background-image: url("assets\images\helpOneBackground.jpg");>
                     <div class="container">
                         <div class="row justify-content-center justify-content-md-start no-gutters">
                             <div class="col-10 col-md-6 static">
@@ -438,8 +438,16 @@
                             <small>Welcome To Raise Hope</small>
                             Small Actions Lead To Big changes
                         </h1>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s</p>
+                        <p>Our Logo symbolises the rise of a new beginning in the domain of
+                            humanity by providing wings to each person who needs help & giving
+                            them a new prospective & life which will surely be impactful in their
+                            journey of life. This NGO will try it's best for the upliftment of society &
+                            build up positive moral amongst the new generation. With the tagline
+                            "Help one, Inspire many" we want every individual to be inspired by the
+                            work we do towards the needy & create a new world where we stand
+                            together by lifting each other. Here we begin the journey with strong
+                            determination & enthusiasm, hope to get support from each one of
+                            you!!</p>
                     </div>
                 </div>
             </div>
@@ -605,9 +613,9 @@
                                 <h3><a href="causes-single.html">Education for Poor Childrens</a></h3>
                                 <p>Inventore veritatis et quasi archit see ecto beatae vitae dicta sunt explaemo enim
                                     voluptatem quia</p>
-                                <div class="btn-wrap">
+                                <!-- <div class="btn-wrap">
                                     <a class="btn-primary btn" href="causes-single.html">Donate Now</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -637,9 +645,9 @@
                                 <h3><a href="causes-single.html">Help For Homeless People</a></h3>
                                 <p>Inventore veritatis et quasi archit see ecto beatae vitae dicta sunt explaemo enim
                                     voluptatem quia</p>
-                                <div class="btn-wrap">
+                                <!-- <div class="btn-wrap">
                                     <a class="btn-primary btn" href="causes-single.html">Donate Now</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -654,7 +662,7 @@
                                 <div class="raised-progress">
                                     <div class="skillbar-wrap">
                                         <div class="clearfix">
-                                            $10086 raised of $15000
+                                           
                                         </div>
                                         <div class="skillbar" data-percent="57%">
                                             <div class="skillbar-percent">57%</div>
@@ -669,9 +677,9 @@
                                 <h3><a href="causes-single.html">Supply Water For Good Health</a></h3>
                                 <p>Inventore veritatis et quasi archit see ecto beatae vitae dicta sunt explaemo enim
                                     voluptatem quia</p>
-                                <div class="btn-wrap">
+                                <!-- <div class="btn-wrap">
                                     <a class="btn-primary btn" href="causes-single.html">Donate Now</a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -686,7 +694,7 @@
                                 <div class="raised-progress">
                                     <div class="skillbar-wrap">
                                         <div class="clearfix">
-                                            $10086 raised of $15000
+                                           
                                         </div>
                                         <div class="skillbar" data-percent="80%">
                                             <div class="skillbar-percent">80%</div>
@@ -701,9 +709,9 @@
                                 <h3><a href="causes-single.html">Help For Child Malnutrition</a></h3>
                                 <p>Inventore veritatis et quasi archit see ecto beatae vitae dicta sunt explaemo enim
                                     voluptatem quia</p>
-                                <div class="btn-wrap">
+                                <!-- <div class="btn-wrap">
                                     <a class="btn-primary btn" href="causes-single.html">Donate Now</a>
-                                </div>
+                                </div> -->
                             </div>
 
                         </div>
@@ -735,9 +743,9 @@
                                 <h3><a href="causes-single.html">Help For Good Food</a></h3>
                                 <p>Inventore veritatis et quasi archit see ecto beatae vitae dicta sunt explaemo enim
                                     voluptatem quia</p>
-                                <div class="btn-wrap">
+                                <!-- <div class="btn-wrap">
                                     <a class="btn-primary btn" href="causes-single.html">Donate Now</a>
-                                </div>
+                                </div> -->
                             </div>
 
                         </div>
@@ -768,9 +776,9 @@
                                 <h3><a href="causes-single.html">Help From Natural Disaster</a></h3>
                                 <p>Inventore veritatis et quasi archit see ecto beatae vitae dicta sunt explaemo enim
                                     voluptatem quia</p>
-                                <div class="btn-wrap">
+                                <!-- <div class="btn-wrap">
                                     <a class="btn-primary btn" href="causes-single.html">Donate Now</a>
-                                </div>
+                                </div> -->
                             </div>
 
                         </div>
@@ -807,22 +815,22 @@
                     <div class="col-lg-4">
                         <h1 class="heading-main mb-lg-0">
                             <small>Images Gallery</small>
-                            Project We Have Done
+                            Events We Have Done
                         </h1>
                     </div>
 
                     <div class="col-lg-4 col-md-6">
                         <!-- Gallery Item -->
                         <div class="img-gallery-item">
-                            <a href="assets/images/gallery/gallery_img_1.jpg" title="School Development">
+                            <a href="assets/images/helpingStudent.jpg" title="School Development">
                                 <div class="gallery-content">
                                     <div class="tag"><span>Education</span></div>
-                                    <h3>School Development</h3>
+                                    <h3>Helping Student</h3>
                                     <div class="img-open">
                                         <i data-feather="plus-circle"></i>
                                     </div>
                                 </div>
-                                <img src="assets/images/gallery/gallery_img_1.jpg" alt="">
+                                <img src="assets/images/helpingStudent.jpg" alt="">
                             </a>
                         </div>
                         <!-- Gallery Item -->
@@ -831,15 +839,15 @@
                     <div class="col-lg-4 col-md-6">
                         <!-- Gallery Item -->
                         <div class="img-gallery-item">
-                            <a href="assets/images/gallery/gallery_img_2.jpg" title="Child Welfare">
+                            <a href="assets/images/helpingOlder.jpg" title="Child Welfare">
                                 <div class="gallery-content">
-                                    <div class="tag"><span>Education</span></div>
-                                    <h3>Child Welfare</h3>
+                                    <div class="tag"><span>Initiative</span></div>
+                                    <h3>Helping Senior Citizen</h3>
                                     <div class="img-open">
                                         <i data-feather="plus-circle"></i>
                                     </div>
                                 </div>
-                                <img src="assets/images/gallery/gallery_img_2.jpg" alt="">
+                                <img src="assets/images/helpingOlder.jpg" alt="">
                             </a>
                         </div>
                         <!-- Gallery Item -->
