--- a/html/index.html
+++ b/html/index.html
@@ -435,7 +435,7 @@
                 <div class="row">
                     <div class="col-lg-5 col-md-12">
                         <h1 class="heading-main">
-                            <small>Welcome To Raise Hope</small>
+                            <small>Help One Inspire Many</small>
                             Small Actions Lead To Big changes
                         </h1>
                         <p>Our Logo symbolises the rise of a new beginning in the domain of
@@ -1291,7 +1291,7 @@
                                     <div class="client-testimonial-alternate">
                                         <div class="client-inner-content">
                                             <i class="charity-quotes"></i>
-                                            <p>Gracious is a nonproﬁt organization supported by community leaders,
+                                            <p>Rajabhau gudade foundation is a nonproﬁt organization supported by community leaders,
                                                 corporate sponsors, churches,
                                                 helpless etc. and concerned citizens</p>
                                         </div>
@@ -1317,7 +1317,7 @@
                                     <div class="client-testimonial-alternate">
                                         <div class="client-inner-content">
                                             <i class="charity-quotes"></i>
-                                            <p>Gracious is a nonproﬁt organization supported by community leaders,
+                                            <p>Rajabhau gudade foundation is organization supported by community leaders,
                                                 corporate sponsors, churches,
                                                 helpless etc. and concerned citizens</p>
                                         </div>
