--- a/html/index.html
+++ b/html/index.html
@@ -689,7 +689,7 @@
                     <div class="item">
                         <div class="causes-wrap">
                             <div class="img-wrap">
-                                <a href="causes-single.html"><img src="assets/images/causes/causes_img_4.jpg"
+                                <a href="causes-single.html"><img src="assets/images/helpFoodNGO.jpg"
                                         alt=""></a>
                                 <div class="raised-progress">
                                     <div class="skillbar-wrap">
@@ -856,15 +856,15 @@
                     <div class="col-lg-4 col-md-6">
                         <!-- Gallery Item -->
                         <div class="img-gallery-item">
-                            <a href="assets/images/gallery/gallery_img_3.jpg" title="Child Welfare">
+                            <a href="assets/images/treePlantationNGO.jpg" title="Child Welfare">
                                 <div class="gallery-content">
-                                    <div class="tag"><span>Education</span></div>
-                                    <h3>Child Welfare</h3>
+                                    <div class="tag"><span>Social Work</span></div>
+                                    <h3>Tree Plantation</h3>
                                     <div class="img-open">
                                         <i data-feather="plus-circle"></i>
                                     </div>
                                 </div>
-                                <img src="assets/images/gallery/gallery_img_3.jpg" alt="">
+                                <img src="assets/images/treePlantationNGO.jpg" alt="">
                             </a>
                         </div>
                         <!-- Gallery Item -->
@@ -873,15 +873,15 @@
                     <div class="col-lg-4 col-md-6">
                         <!-- Gallery Item -->
                         <div class="img-gallery-item">
-                            <a href="assets/images/gallery/gallery_img_4.jpg" title="Child Welfare">
+                            <a href="assets/images/bookDistributionNGO.jpg" title="Child Welfare">
                                 <div class="gallery-content">
                                     <div class="tag"><span>Education</span></div>
-                                    <h3>Child Welfare</h3>
+                                    <h3>Books Distribution </h3>
                                     <div class="img-open">
                                         <i data-feather="plus-circle"></i>
                                     </div>
                                 </div>
-                                <img src="assets/images/gallery/gallery_img_4.jpg" alt="">
+                                <img src="assets/images/bookDistributionNGO.jpg" alt="">
                             </a>
                         </div>
                         <!-- Gallery Item -->
@@ -890,7 +890,24 @@
                     <div class="col-lg-4 col-md-6">
                         <!-- Gallery Item -->
                         <div class="img-gallery-item">
-                            <a href="assets/images/gallery/gallery_img_5.jpg" title="Child Welfare">
+                            <a href="assets/images/blanketDistributionNGO.png" title="Child Welfare">
+                                <div class="gallery-content">
+                                    <div class="tag"><span>Social Work</span></div>
+                                    <h3>Distributing Blanket</h3>
+                                    <div class="img-open">
+                                        <i data-feather="plus-circle"></i>
+                                    </div>
+                                </div>
+                                <img src="assets/images/blanketDistributionNGO.png" alt="">
+                            </a>
+                        </div>
+                        <!-- Gallery Item -->
+                    </div>
+
+                    <!-- <div class="col-lg-4 col-md-6">
+                       
+                        <div class="img-gallery-item">
+                            <a href="assets/images/creatingAwarenessNGO.jpg" title="Child Welfare">
                                 <div class="gallery-content">
                                     <div class="tag"><span>Education</span></div>
                                     <h3>Child Welfare</h3>
@@ -898,32 +915,15 @@
                                         <i data-feather="plus-circle"></i>
                                     </div>
                                 </div>
-                                <img src="assets/images/gallery/gallery_img_5.jpg" alt="">
+                                <img src="assets/images/creatingAwarenessNGO.jpg" alt="">
                             </a>
                         </div>
-                        <!-- Gallery Item -->
-                    </div>
+                        <!--  Gallery Item -->
+                    <!-- </div>  -->
 
-                    <div class="col-lg-4 col-md-6">
+                    <!-- <div class="col-lg-4 col-md-6">
                         <!-- Gallery Item -->
-                        <div class="img-gallery-item">
-                            <a href="assets/images/gallery/gallery_img_6.jpg" title="Child Welfare">
-                                <div class="gallery-content">
-                                    <div class="tag"><span>Education</span></div>
-                                    <h3>Child Welfare</h3>
-                                    <div class="img-open">
-                                        <i data-feather="plus-circle"></i>
-                                    </div>
-                                </div>
-                                <img src="assets/images/gallery/gallery_img_6.jpg" alt="">
-                            </a>
-                        </div>
-                        <!-- Gallery Item -->
-                    </div>
-
-                    <div class="col-lg-4 col-md-6">
-                        <!-- Gallery Item -->
-                        <div class="img-gallery-item">
+                        <!-- <div class="img-gallery-item">
                             <a href="assets/images/gallery/gallery_img_7.jpg" title="Child Welfare">
                                 <div class="gallery-content">
                                     <div class="tag"><span>Education</span></div>
@@ -934,13 +934,13 @@
                                 </div>
                                 <img src="assets/images/gallery/gallery_img_7.jpg" alt="">
                             </a>
-                        </div>
+                        </div> -->
                         <!-- Gallery Item -->
-                    </div>
+                    <!-- </div> --> 
 
-                    <div class="col-lg-4 col-md-6">
+                    <!-- <div class="col-lg-4 col-md-6">
                         <!-- Gallery Item -->
-                        <div class="img-gallery-item">
+                        <!-- <div class="img-gallery-item">
                             <a href="assets/images/gallery/gallery_img_8.jpg" title="Child Welfare">
                                 <div class="gallery-content">
                                     <div class="tag"><span>Education</span></div>
@@ -951,9 +951,9 @@
                                 </div>
                                 <img src="assets/images/gallery/gallery_img_8.jpg" alt="">
                             </a>
-                        </div>
+                        </div> --> 
                         <!-- Gallery Item -->
-                    </div>
+                    <!-- </div> -->
 
                 </div>
             </div>
@@ -966,7 +966,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-7 col-md-12">
                         <div class="text-center">
-                            <img src="assets/images/about_img.png" alt="">
+                            <img src="assets/images/navNirman.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-12">
@@ -991,7 +991,7 @@
                             <a class="btn btn-default mr-3" href="become-volunteers.html">Join Now</a>
                             <div class="about-phone">
                                 <i data-feather="phone-call"></i>
-                                Conatct Us <br> +1234567899
+                                Conatct Us <br> 9920805532
                             </div>
                         </div>
 
@@ -1159,7 +1159,7 @@
                             <!-- Event Wrap -->
                         </div>
                     </div>
-                    <!-- Events Alternate Wrap -->
+                    <!-- Events Alternate Wrap
 
                 </div>
 
@@ -1639,10 +1639,12 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-8">
+                        <!-- <div class="col-md-8">
                             <h3>Our Photostream</h3>
-                            <ul id="basicuse" class="photo-thumbs"></ul>
-                        </div>
+                                 <ul id="basicuse" class="photo-thumbs">
+
+                            </ul> -->
+                        <!-- </div>  -->
                         <div class="col-md-4">
                             <div class="footer-widget-menu">
                                 <ul class="list-unstyled">
