Navbar  & Footer Changes
Navbar  & Footer Changes

--- a/html/index.html
+++ b/html/index.html
@@ -127,6 +127,8 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle-mob" href="index.html" id="dropdown03"
                                 aria-haspopup="true" aria-expanded="false">Home </a>
+
+                                    <!-- <i class="icofont-rounded-down"></i> -->
                             <!-- <ul class="dropdown-menu" aria-labelledby="dropdown03">
                                 <li><a class="dropdown-item" href="index.html">Home Layout 1</a></li>
                                 <li><a class="dropdown-item" href="index-2.html">Home Layout 2</a></li>
@@ -146,12 +148,12 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Causes <i
-                                    class="icofont-rounded-down"></i></a>
-                            <ul class="dropdown-menu">
+                                aria-haspopup="true" aria-expanded="false">Causes</a>
+                                <!-- <iclass="icofont-rounded-down"></i> -->
+                            <!-- <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="causes-list.html">Causes List</a></li>
                                 <li><a class="dropdown-item" href="causes-single.html">Causes Single</a></li>
-                            </ul>
+                            </ul> -->
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown"
@@ -161,31 +163,32 @@
                                 <li><a class="dropdown-item" href="volunteers.html">Volunteers</a></li>
                                 <li><a class="dropdown-item" href="become-volunteers.html">Become Volunteers</a></li>
                                 <li><a class="dropdown-item" href="donation-page.html">Donation Page</a></li>
-                                <!-- <li><a class="dropdown-item" href="shortcodes-element.html">Shortcode Elements</a></li> -->
-                                <!-- <li><a class="dropdown-item" href="typography.html">Typography</a></li> -->
+                                <!-- <li><a class="dropdown-item" href="shortcodes-element.html">Shortcode Elements</a></li>
+                                <li><a class="dropdown-item" href="typography.html">Typography</a></li> -->
                                 <li><a class="dropdown-item" href="our-faqs.html">Our Faq's</a></li>
                                 <!-- <li><a class="dropdown-item" href="404-page.html">404 Page</a></li> -->
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Events <i
-                                    class="icofont-rounded-down"></i></a>
-                            <ul class="dropdown-menu">
+                                aria-haspopup="true" aria-expanded="false">Events </a>
+                                <!-- <iclass="icofont-rounded-down"></i> -->
+                            <!-- <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="events-list.html">Events List</a></li>
                                 <!-- <li><a class="dropdown-item" href="events-alternate.html">Events Alternate</a></li> -->
                                 <li><a class="dropdown-item" href="events-single.html">Events Single</a></li>
-                            </ul>
+                            </ul> -->
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Blog </i></a>
+                                aria-haspopup="true" aria-expanded="false">Blog </a>
+                                <!-- <i class="icofont-rounded-down"></i> -->
 
-                            <ul class="dropdown-menu">
-                                <!-- <li><a class="dropdown-item" href="blog-standard.html">Blog Standard</a></li> -->
-                                <!-- <li><a class="dropdown-item" href="blog-grid.html">Blog Grid</a></li> -->
-                                <!-- <li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li> -->
-                            </ul>
+                            <!-- <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="blog-standard.html">Blog Standard</a></li>
+                                <li><a class="dropdown-item" href="blog-grid.html">Blog Grid</a></li>
+                                <li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
+                            </ul> -->
                         </li>
 
 
@@ -227,7 +230,7 @@
 
 
                 <!--/owl-slide-->
-                <div class="owl-slide d-flex align-items-center cover"
+                <div class="owl-slide d-flex align-items-center cover";
                     style="background-image: url(images\helpOneBackground1.jpg);">
                     <div class="container">
                         <div class="row justify-content-center justify-content-md-start no-gutters">
@@ -1590,23 +1593,24 @@
                 <!-- Column First -->
                 <div class="col-lg-4 col-md-12">
                     <div class="logo-footer">
-                        <img src="assets/images/logo_white.svg" alt="">
+                        <img src="assets/images/logoFooter.png" alt="">
+                       <div class="word"><p> <span id="word1">Help One,</span>  <br> <span id="word2">Inspire Many</span> </p> </div> 
                     </div>
-                    <p>This is Photoshop’s version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet</p>
+                    <div class="location"><span>Rajabhau Gudade Foundation</span></div>
 
                     <div class="footer-widget-contact">
                         <ul class="list-unstyled">
-                            <li>
+                             <li>
                                 <div><i data-feather="map-pin"></i> </div>
-                                <div>Envato Pty Ltd, 13/2 Elizabeth St Melbourne VIC 3000, Australia</div>
-                            </li>
+                                <div>  Balewadi Pune, 411045.</div>
+                            </li> 
                             <li>
                                 <div><i data-feather="phone"></i> </div>
-                                <div><a href="tel:+1234567899">+1234567899</a></div>
+                                <div><a href="tel:+919920805532">+919920805532</a></div>
                             </li>
                             <li>
                                 <div><i data-feather="mail"></i> </div>
-                                <div><a href="mailto:info@hoperaise.com">info@hoperaise.com</a></div>
+                                <div><a href="info@rajabhaugudadefoundation.com">info@rajabhaugudadefoundation.com</a></div>
                             </li>
                             <li>
                                 <div><i data-feather="clock"></i> </div>
@@ -1639,12 +1643,10 @@
                     </div>
 
                     <div class="row">
-                        <!-- <div class="col-md-8">
-                            <h3>Our Photostream</h3>
-                                 <ul id="basicuse" class="photo-thumbs">
-
-                            </ul> -->
-                        <!-- </div>  -->
+                        <div class="col-md-8">
+                            <!-- <h3>Our Photostream</h3> -->
+                            <!-- <ul id="basicuse" class="photo-thumbs"></ul> -->
+                        </div>
                         <div class="col-md-4">
                             <div class="footer-widget-menu">
                                 <ul class="list-unstyled">
@@ -1661,7 +1663,7 @@
                             <div class="give-us-call">
                                 <i data-feather="phone"></i>
                                 <h4>Give us a call</h4>
-                                <h3><a href="tel:+1234567899">+1234567899</a></h3>
+                                <h3><a href="tel:+919920805532">+919920805532</a></h3>
                             </div>
                         </div>
                     </div>
@@ -1677,7 +1679,7 @@
                 <div class="row text-md-start text-center">
                     <div class="col-sm-12 col-md-auto copyright-text">
                         © Copyright <span class="txt-blue">Gracious</span> 2020. | Created by <a
-                            href="https://themeforest.net/user/mannatstudio" rel="nofollow">MannatStudio</a>
+                            href="https://themeforest.net/user/mannatstudio" rel="nofollow">CodeMind</a>
                     </div>
                     <div class="col-sm-12 col-md-auto ml-md-auto text-md-right text-center copyright-links">
                         <a href="#">Terms & Condition</a> | <a href="#">Privacy Policy</a> | <a href="#">Legal</a>
