--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -120,12 +120,12 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse" data-hover="dropdown" data-animations="slideInUp slideInUp slideInUp slideInUp">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle-mob" href="index.html" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home <i class="icofont-rounded-down"></i></a>                
+                            <a class="nav-link dropdown-toggle-mob" href="index.html" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>                
                             <ul class="dropdown-menu" aria-labelledby="dropdown03">
-                                <li><a class="dropdown-item" href="index.html">Home Layout 1</a></li>
+                                <!-- <li><a class="dropdown-item" href="index.html">Home Layout 1</a></li>
                                 <li><a class="dropdown-item" href="index-2.html">Home Layout 2</a></li>
                                 <li><a class="dropdown-item" href="index-3.html">Home Layout 3</a></li>
-                                <li class="dropdown dropdown-submenu">
+                                <li class="dropdown dropdown-submenu"> -->
                                     <!-- <a class="dropdown-toggle-mob dropdown-item dropdown-submenu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Third Level Menu <i class="icofont-rounded-right float-right"></i></a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <li><a href="#" class="dropdown-item">Action</a></li>
@@ -139,11 +139,11 @@
                             <a class="nav-link" href="about-us.html">About Us</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Causes <i class="icofont-rounded-down"></i></a>
-                            <ul class="dropdown-menu">                  
+                            <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Causes</a>
+                            <!-- <ul class="dropdown-menu">                  
                                 <li><a class="dropdown-item" href="causes-list.html">Causes List</a></li>
                                 <li><a class="dropdown-item" href="causes-single.html">Causes Single</a></li>                
-                            </ul>
+                            </ul> -->
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages <i class="icofont-rounded-down"></i></a>
@@ -151,28 +151,28 @@
                                 <li><a class="dropdown-item" href="volunteers.html">Volunteers</a></li>
                                 <li><a class="dropdown-item" href="become-volunteers.html">Become Volunteers</a></li>
                                 <li><a class="dropdown-item" href="donation-page.html">Donation Page</a></li>
-                                <li><a class="dropdown-item" href="shortcodes-element.html">Shortcode Elements</a></li>
-                                <li><a class="dropdown-item" href="typography.html">Typography</a></li> 
+                                <!-- <li><a class="dropdown-item" href="shortcodes-element.html">Shortcode Elements</a></li>
+                                <li><a class="dropdown-item" href="typography.html">Typography</a></li>  -->
                                 <li><a class="dropdown-item" href="our-faqs.html">Our Faq's</a></li>
-                                <li><a class="dropdown-item" href="404-page.html">404 Page</a></li>                  
+                                <!-- <li><a class="dropdown-item" href="404-page.html">404 Page</a></li>                   -->
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events <i class="icofont-rounded-down"></i></a>
-                            <ul class="dropdown-menu">
+                            <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Events </a>
+                            <!-- <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="events-list.html">Events List</a></li>
                                 <li><a class="dropdown-item" href="events-alternate.html">Events Alternate</a></li>
                                 <li><a class="dropdown-item" href="events-single.html">Events Single</a></li>
-                            </ul>
+                            </ul> -->
                         </li>                        
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog <i class="icofont-rounded-down"></i></a>
+                            <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog </a>
 
-                            <ul class="dropdown-menu">
+                            <!-- <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="blog-standard.html">Blog Standard</a></li>
                                 <li><a class="dropdown-item" href="blog-grid.html">Blog Grid</a></li>
                                 <li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
-                            </ul>
+                            </ul> -->
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact-us.html">Contact</a>
@@ -420,10 +420,10 @@
                 <!-- Column Third -->
 
                 <!-- Column Fourth -->
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <h3 class="footer-heading">Photo Gallery</h3>
                     <ul id="basicuse" class="photo-thumbs"></ul>
-                </div>
+                </div> -->
                 <!-- Column Fourth -->
             </div>
         </div>  
